# Retrieval-QA-Benchmark

./: .gitignore  .readthedocs.yaml  README  README.md  bench_model.py  config.yaml  eval.py  logging.conf  model.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/poetry_install/: action.yml
.github/workflows/: lint.yaml  test.yaml
config/: default.yaml  exp.yaml  mmlu-bm25-hybrid-2staged.yaml  mmlu-elbm25.yaml  mmlu-faiss-bm25-hybrid.yaml  mmlu-faiss-bm25-union-2staged.yaml  mmlu-faiss.yaml  mmlu-hybrid.yaml  mmlu-llama2-remote-retrieval-2staged.yaml  mmlu-llama2-remote-retrieval-base.yaml  mmlu-llama2-remote-retrieval-elbm25.yaml  mmlu-llama2-remote-retrieval-faiss-bm25-hybrid.yaml  mmlu-llama2-remote-retrieval-faiss-bm25-union-2staged.yaml  mmlu-llama2-remote-retrieval-faiss.yaml  mmlu-llama2-remote-retrieval-myscale.yaml  mmlu-llama2-remote.yaml  mmlu-myscale.yaml  mmlu.yaml  test.yaml
config/datasets/: arc.yaml  hotpotqa.yaml  mmlu.yaml  truthfulqa.yaml  wikihop.yaml
config/gpt_exp/: gpt_mmlu.yaml
config/models/: chatgpt35.yaml  gpt35.yaml  remote-llama2-13b.yaml  tgi.yaml
config/transforms/: elastic-bm25-pre.yaml  elastic-bm25.yaml  faiss-bm25-hybrid-pre.yaml  faiss-bm25-hybrid.yaml  faiss-bm25-union-pre.yaml  faiss-pre.yaml  faiss.yaml  hybrid-rerank.yaml  myscale-2stage.yaml  myscale.yaml  retrieval.yaml
docs/source/: api.rst  conf.py  getting-started.rst  index.rst  write-conf.rst  write-your-own.rst
docs/source/api/: 1-api-transforms.rst  2-api-searchers.rst  3-api-llms.rst  4-api-evaluators.rst  4-api-protocols.rst  5-api-schema.rst  6-api-utils.rst
result-docs/: rag_performance_benchmarks.md
retrieval_qa_benchmark/datasets/: __init__.py  ai2_arc.py  base.py  helper.py  hotpotqa.py  mmlu.py  truthfulqa.py  wikihop.py
retrieval_qa_benchmark/datastore/: __init__.py  base.py  clickhouse.py
retrieval_qa_benchmark/embeddings/: __init__.py
retrieval_qa_benchmark/evaluators/: __init__.py  mcma.py  mcsa.py
retrieval_qa_benchmark/experimental/: embedding.py  knowledge.py
retrieval_qa_benchmark/experimental/datastore/: __init__.py  base.py  clickhouse.py  db_helper.py
retrieval_qa_benchmark/experimental/embeddings/: stembedding.py
retrieval_qa_benchmark/experimental/knowledge/: __init__.py  hotpotqa.py
retrieval_qa_benchmark/knowledge/: __init__.py  hotpotqa.py
retrieval_qa_benchmark/knowledgebases/: base.py
retrieval_qa_benchmark/models/: __init__.py  base.py  openai.py  tgi.py
retrieval_qa_benchmark/protocols/: __init__.py  base.py  mcma.py  mcsa.py
retrieval_qa_benchmark/schema/: __init__.py  base.py  dataset.py  datatypes.py  embedding.py  evaluator.py  knowledge.py  model.py  orm.py  transform.py
retrieval_qa_benchmark/transforms/: __init__.py  base.py  context_faiss.py  context_prompt.py  hybrid.py  mcma_prompt.py  mcsa_prompt.py  multistaged.py  singlestaged.py
retrieval_qa_benchmark/transforms/agents/: base.py  sql.py
retrieval_qa_benchmark/transforms/myscale_retrieval/: myscale_search.py  utils_search.py
retrieval_qa_benchmark/transforms/retrieval/: hybrid_search_retrieval.py  multistaged_retrieval.py  singlestaged_retreival.py
retrieval_qa_benchmark/transforms/search/: __init__.py  base.py  elsearch.py  faiss.py  faiss_elsearch_hybrid.py  faiss_elsearch_union.py  myscale.py  rerank.py  utils.py
retrieval_qa_benchmark/transforms/searchers/: __init__.py  colbert.py  elsearch.py  faiss_elsearch_union.py  rerank.py  utils.py
retrieval_qa_benchmark/utils/: config.py  db_helper.py  factory.py  profiler.py  registry.py  transforms.py
scripts/: README.md  ans_batch1.txt  draw_graph.ipynb  eval.ipynb  eval.py  eval_arc.py  eval_mmlu.py  prepare_env.sh  process_ans.py  run_test.sh  upload_to_s3.sh
tests/unittest/: test_transform_DAG.py  test_transform_seq.py
tests/unittest/assets/: test_agent.yaml  test_dataset.yaml  test_evaluator.yaml  test_transform_DAG.yaml  test_transform_graph.yaml  test_transform_seq.yaml
tests/unittest/datasets/: test_dataset_add.py
tests/unittest/dummy/: __init__.py  agent.py  datasets.py  evaluators.py  llms.py  transforms.py
tests/unittest/evaluators/: test_evaluators.py
tests/unittest/transforms/: test_agent.py  test_transform_graph.py  test_transform_seq.py
