[tool.poetry]
name = "retrieval-qa-benchmark"
version = "0.0.1"
description = "Benchmark baseline for retrieval qa applications"
license = "GPL-3.0-only"
authors = [
    "Fangrui Liu <fangruil@myscale.com>",
]
maintainers = [
    "Fangrui Liu <fangruil@myscale.com>",
]
readme = "README.md"
packages = [{include = "retrieval_qa_benchmark"}]
repository = "https://github.com/myscale/Retrieval-QA-Benchmark"
keywords = ["LLM", "benchmark"]
classifiers = [
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Information Analysis",

]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.1.1"
datasets = "^2.14.2"
tqdm = "^4.65.0"
loguru = "^0.7.0"
transformers = "^4.31.0"
sentence-transformers = "^2.2.2"
zstd = "^1.5.5.1"
openai = "^0.27.8"
numpy = "^1.20"
nltk = "^3.8.1"
rank-bm25 = "^0.2.2"
torch = "^2.0.1"
pyyaml-include = "^1.3.1"
elasticsearch = "^8.9.0"
parse = "^1.19.1"
types-pyyaml = "^6.0.12.11"
clickhouse-connect = "^0.6.8"
rake-nltk = "^1.0.6"
faiss-cpu = "^1.7.4"

[tool.poetry.group.docs.dependencies]
autodoc-pydantic = "^2.0.1"
sphinx = "<7"
sphinx-rtd-theme = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.7.0"}
pytest = "^7.4.0"
ruff = "^0.0.280"
mypy = "^1.4.1"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
exclude = ["scripts/"]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = [
  "retrieval_qa_benchmark/experimental/*", 
  "retrieval_qa_benchmark/transforms/myscale_retrieval/*", 
  "docs/"
]

